--- a/index.html
+++ b/index.html
@@ -6,23 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sinh nhật Em Yêu</title>
     <link rel="stylesheet" href="./style.css">
+
 </head>
 <body>
 	<div class="card">
 		<div class="imgBox">
 			<div class="bark"></div>
-			<img src="./src/Happy Birthday.png">
+			<img src="./src/h2.png">
 		</div>
 		<div class="details">
-			<h4 class="color1">Chúc em tuổi mới đong đầy</h2>
-			<h4 class="color2 margin">Bao nhiêu điều tốt,đều là của em</h3>
+			<h4 class="color1">Chúc em trong ví có tiền</h2>
+			<h4 class="color2 margin">bán thuốc có điểm,trong lòng có anh</h3>
 			<p>Một ngày đặc biệt dành cho </p>
 			<p>một người vô cùng đặc biệt với anh</p>
 			<p>Hy vọng bước sang một tuổi mới</p>
 			<p>tất cả công việc và ước mơ còn</p>
 			<p>đang dang dở của em sẽ sớm</p>
 			<p>thành hiện thực</p>
-			<p>Many happy returns of the day!</p>
+			<p>Many happy returns of the day !</p>
      
 			<p class="text-right">Happy Birthday, Trần Diễm</p>
 			<p class="text-right">Yêu em nhất đời ♥</p>
