upload source final

--- a/index.html
+++ b/index.html
@@ -6,13 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sinh nhật Em Yêu</title>
     <link rel="stylesheet" href="./style.css">
-
 </head>
 <body>
 	<div class="card">
 		<div class="imgBox">
 			<div class="bark"></div>
-			<img src="./src/h2.png">
+			<img src="./src/h6.png">
 		</div>
 		<div class="details">
 			<h4 class="color1">Chúc em trong ví có tiền</h2>
@@ -23,8 +22,8 @@
 			<p>tất cả công việc và ước mơ còn</p>
 			<p>đang dang dở của em sẽ sớm</p>
 			<p>thành hiện thực</p>
-			<p>Many happy returns of the day !</p>
-     
+			<p>Anh mãi yêu em và luôn luôn bên cạnh em</p>
+			<p>Chúc mừng sinh nhật tình yêu của anh</p>    
 			<p class="text-right">Happy Birthday, Trần Diễm</p>
 			<p class="text-right">Yêu em nhất đời ♥</p>
 		</div>
@@ -36,6 +35,7 @@
       <div id="player-container">
         <div id="play-pause" class="play">Play</div>
       </div>
+	  
       
 
 </body>
